fixed width on mobile production screen

--- a/src/style/dashboard/dashboard.scss
+++ b/src/style/dashboard/dashboard.scss
@@ -21,7 +21,7 @@
 }
 
 .dashboard-navbar {
-    width: 100%;
+    width: 100vw;
     display: grid;
     justify-content: right;
     position: fixed;
